--- a/frontend/src/app/components/dashboard/dashboard.component.css
+++ b/frontend/src/app/components/dashboard/dashboard.component.css
@@ -21,6 +21,9 @@ body {
   text-align: center;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Add shadow */
 }
+.hide{
+  display: none !important;
+}
 
 h1 {
   font-size: 3rem;
@@ -135,3 +138,71 @@ p {
   text-decoration: underline;
   margin: 0 4px;
 }
+/* From Uiverse.io by withyzu */
+.template {
+  /* ------------------------------------------------------------ */
+  /* fill */
+  --fill: #0000;
+  --fill-hover: hsla(0, 0%, 45%, 0.2);
+  --fill-active: hsl(0, 0%, 10%);
+  /* txt */
+  --txt: #ccc;
+  /*-------------------------*/
+  --br: 0.625rem;
+  --gap: 0.25rem;
+  --popup-main-h: 20rem;
+  /* ---------------------------------------------------------- */
+  display: flex;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-size: 0.975rem;
+  color: var(--txt);
+}
+
+
+.btn {
+  position: relative;
+  display: inline-block;
+  list-style-type: none;
+  list-style: none;
+  appearance: none;
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: inherit;
+  color: inherit;
+  white-space: nowrap;
+  padding: calc(var(--gap) * 2) calc(var(--gap) * 8) calc(var(--gap) * 2)
+    calc(var(--gap) * 4);
+  text-align: left;
+  background-color: var(--fill);
+  border-radius: var(--br) calc(var(--br) / 2) calc(var(--br) / 2) var(--br);
+  transition: background-color 500ms;
+}
+
+
+
+
+
+
+hr {
+  margin: 0.8rem;
+
+  border: 1px dashed #313131;
+}
+
+/* popup */
+.popup {
+  position: relative;
+}
+
+.popup-header {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  gap: calc(var(--gap) * 3);
+}
+
