--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
           <div class="row">
               <div class="col-xl-6 col-lg-6 text-center text-lg-left">
                   <div class="copyright-text">
-                      <p>Copyright &copy; 2025, All Right Reserved <a style="cursor: pointer;"  (click)="$event.preventDefault()">Linkly</a></p>
+                      <p>Copyright &copy; 2025, All Right Reserved <a style="cursor: pointer;"  (click)="$event.preventDefault()">TrimURL</a></p>
                   </div>
               </div>
               <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
